--- a/Data_Uploading/templates/Data_Uploading/show1.html
+++ b/Data_Uploading/templates/Data_Uploading/show1.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">-->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/dt/dt-1.10.24/datatables.min.css"/>
     <script type="text/javascript" src="https://cdn.datatables.net/v/dt/dt-1.10.24/datatables.min.js"></script>
     <title>{% block title%} {% endblock %}</title>
@@ -34,6 +34,7 @@
         <a class="nav-link" href="csv">Download<span class="sr-only">(current)</span></a>
       </li>
       </ul>
+      <!-- <input class="form-control mr-sm-2" disabled width="50px" type="search" placeholder="Selected Text" aria-label="sel_text" name="sel_text" id="sel_text"> -->
     <form method ="get" action="search"class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" name="query" id="query">
       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
@@ -59,13 +60,22 @@ table, th, td {
   border: 1px solid black;
   border-collapse: collapse;
 }
-th, td {
+th, td{
+  text-align: left;
+  overflow: hidden;
   padding: 5px;
 }
-th {
-  text-align: left;
-}
+table {
+      table-layout: fixed;
+      white-space: nowrap;
+      line-height: 21px;
+ }
+ 
 </style>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+<link rel="stylesheet" href="{% static '/css/jquery.sheetjs.css' %}" />
+<script src="{% static '/js/jquery.sheetjs.js' %}"></script>
 </head>
 <body>
 <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -76,53 +86,55 @@ th {
     </form>-->
   </div>
 </nav>
-<table id="dtBasicExample" class="table table-striped table-bordered table-sm" cellspacing="0" width="100%">
+<table id="dtBasicExample" class="table table-striped table-bordered table-sm sheetjs" cellspacing="0">
+  <thead>
     <tr class="filters">  
-        <th class="th-sm">Company id</th>  
-        <th class="th-sm">Company_Name<form method ="get" action="search"class="form-inline my-2 my-lg-0"><input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" name="query" id="query"><button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button></th></form>    
-        <th class="th-sm">Website<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" name="query" id="query"></th> 
-        <th class="th-sm">Employee_Range<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" name="query" id="query"></th>  
-        <th class="th-sm">Industry<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" name="query" id="query"></th>
-        <th class="th-sm">Address_1</th>
-        <th class="th-sm">Address_2</th>
-        <th class="th-sm">City</th>
-        <th class="th-sm">Zip_Code</th>
-        <th class="th-sm">Country<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" name="query" id="query"></th>
-        <th class="th-sm">First_Name</th>
-        <th class="th-sm">Last_Name</th>
-        <th class="th-sm">Job_Title</th>
-        <th class="th-sm">LinkedIn_URL</th>
-        <th class="th-sm">Public_Profile</th>
-        <th class="th-sm">Email_Id</th>
-        <th class="th-sm">Contact_Num</th>
-        <th class="th-sm">Job_Url</th>
-        <th class="th-sm">Job_Opening</th>
-        <th class="th-sm">Actions</th>  
+        <th class="th-sm" title="Company id">Company id</th>  
+        <!--<th class="th-sm">Company_Name<form method ="get" action="search"class="form-inline my-2 my-lg-0"><input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" name="query" id="query"><button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button></th></form>-->
+        <th class="th-sm" title="Company_Name">Company_Name</th>    
+        <th class="th-sm" title="Website">Website</th> 
+        <th class="th-sm" title="Employee_Range">Employee_Range</th>  
+        <th class="th-sm" title="Industry">Industry</th>
+        <th class="th-sm" title="Address_1">Address_1</th>
+        <th class="th-sm" title="Address_2">Address_2</th>
+        <th class="th-sm" title="City">City</th>
+        <th class="th-sm" title="Zip_Code">Zip_Code</th>
+        <th class="th-sm" title="Country">Country</th>
+        <th class="th-sm" title="First_Name">First_Name</th>
+        <th class="th-sm" title="Last_Name">Last_Name</th>
+        <th class="th-sm" title="Job_Title">Job_Title</th>
+        <th class="th-sm" title="LinkedIn_URL">LinkedIn_URL</th>
+        <th class="th-sm" title="Public_Profile">Public_Profile</th>
+        <th class="th-sm" title="Email_Id">Email_Id</th>
+        <th class="th-sm" title="Contact_Num">Contact_Num</th>
+        <th class="th-sm" title="Job_Url">Job_Url</th>
+        <th class="th-sm" title="Job_Opening">Job_Opening</th>
+        <th class="th-sm" title="Actions">Actions</th>  
     </tr>  
     </thead>  
     <tbody>
       
 {% for Data in Data %}  
     <tr>  
-        <td>{{ cid }}</td>  
-        <td>{{ Data.Company_Name }}</td>  
-        <td>{{ Data.Website }}</td>  
-        <td>{{ Data.Employee_Range }}</td>
-        <td>{{ Data.Industry }}</td>
-        <td>{{ Data.Address_1 }}</td>
-        <td>{{ Data.Address_2 }}</td>
-        <td>{{ Data.City }}</td>
-        <td>{{ Data.Zip_Code }}</td>
-        <td>{{ Data.Country }}</td>
-        <td>{{ Data.First_Name }}</td>
-        <td>{{ Data.Last_Name }}</td>
-        <td>{{ Data.Job_Title }}</td>
-        <td>{{ Data.LinkedIn_URL }}</td>
-        <td>{{ Data.Public_Profile }}</td>
-        <td>{{ Data.Email_Id }}</td>
-        <td>{{ Data.Contact_Num }}</td>
-        <td>{{ Data.Job_Url }}</td>
-        <td>{{ Data.Job_Opening }}</td>
+        <td title="{{ cid }}">{{ cid }}</td>  
+        <td title="{{ Data.Company_Name }}">{{ Data.Company_Name }}</td>  
+        <td title="{{ Data.Website }}"><a href="{{ Data.Website }}" target="_blank">{{ Data.Website }}</a></td>  
+        <td title="{{ Data.Employee_Range }}">{{ Data.Employee_Range }}</td>
+        <td title="{{ Data.Industry }}">{{ Data.Industry }}</td>
+        <td title="{{ Data.Address_1 }}">{{ Data.Address_1 }}</td>
+        <td title="{{ Data.Address_2 }}">{{ Data.Address_2 }}</td>
+        <td title="{{ Data.City }}">{{ Data.City }}</td>
+        <td title="{{ Data.Zip_Code }}">{{ Data.Zip_Code }}</td>
+        <td title="{{ Data.Country }}">{{ Data.Country }}</td>
+        <td title="{{ Data.First_Name }}">{{ Data.First_Name }}</td>
+        <td title="{{ Data.Last_Name }}">{{ Data.Last_Name }}</td>
+        <td title="{{ Data.Job_Title }}">{{ Data.Job_Title }}</td>
+        <td title="{{ Data.LinkedIn_URL }}">{{ Data.LinkedIn_URL }}</td>
+        <td title="{{ Data.Public_Profile }}">{{ Data.Public_Profile }}</td>
+        <td title="{{ Data.Email_Id }}">{{ Data.Email_Id }}</td>
+        <td title="{{ Data.Contact_Num }}">{{ Data.Contact_Num }}</td>
+        <td title="{{ Data.Job_Url }}"><a href="{{ Data.Job_Url }}" target="_blank">{{ Data.Job_Url }}</a></td>
+        <td title="{{ Data.Job_Opening }}">{{ Data.Job_Opening }}</td>
         <td>  
             <a href="/edit/{{ Data.cid }}"><span class="glyphicon glyphicon-pencil" >Edit</span></a>  
             <a href="/delete/{{ Data.cid }}">Delete</a>  
