--- a/Data_Uploading/templates/Data_Uploading/search_results.html
+++ b/Data_Uploading/templates/Data_Uploading/search_results.html
@@ -24,7 +24,7 @@ th {
 </nav>
 <h2>Search results : </h2>
     {% if allPosts|length < 1 %}
-   <p>No search results</p>
+   <style="color:red;" p>No search results</p>
     Your search query : <b>{{query}}</b> did not match any documents. <br>
     Suggestions:
     <ul>
