--- a/Data_Uploading/templates/Data_Uploading/show.html
+++ b/Data_Uploading/templates/Data_Uploading/show.html
@@ -20,12 +20,11 @@ th {
       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" name="query" id="query">
       <!--<input type="text" id="myInput"type="search" onkeyup="myFunction()" placeholder="Search for names.." title="Type in a name",name="query"id="query">-->
       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-       <a href="csv" download>Click Here To Download The File</a>
+       <a href="Download" download>Click Here To Download The File</a>
     </form>
   </div>
 </nav>
-<h2>SPHURTI WEBAPP</h2>
-<p>ONLINE DATA MANAGEMENT</p>
+<h2>Sphurti WebApp</h2>
 <table id="dtBasicExample" class="table table-striped table-bordered table-sm" cellspacing="0" width="100%">
     <tr>  
         <th class="th-sm">Company id</th>  
@@ -54,7 +53,7 @@ th {
       
 {% for Data in Data %}  
     <tr>  
-        <td>{{ cid }}</td>  
+        <td>{{ Data.cid }}</td>  
         <td>{{ Data.Company_Name }}</td>  
         <td>{{ Data.Website }}</td>  
         <td>{{ Data.Employee_Range }}</td>
@@ -73,10 +72,10 @@ th {
         <td>{{ Data.Contact_Num }}</td>
         <td>{{ Data.Job_Url }}</td>
         <td>{{ Data.Job_Opening }}</td>
-        <td>  
-            <a href="/edit/{{ Data.cid }}"><span class="glyphicon glyphicon-pencil" >Edit</span></a>  
-            <a href="/delete/{{ Data.cid }}">Delete</a>  
-        </td>  
+        <!--<td>  
+            <a href="/edit/{{Data.id}}"><span class="glyphicon glyphicon-pencil" >Edit</span></a>  
+            <a href="/delete/{{ Data.id }}">Delete</a>  
+        </td>-->  
     </tr>  
 {% endfor %}  
     </tbody>  
